# kcm-colorful

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  TRANSLATING.md  extract-messages.sh
po/: CMakeLists.txt  de_DE.po  kcm_colorful.pot  zh_CN.po  zh_TW.po
schemes/: ColorfulDark.colors  ColorfulLight.colors
src/: CMakeLists.txt  kcm_colorful.cpp  kcm_colorful.desktop  kcm_colorful.h  res.qrc
src/helper/: CMakeLists.txt  colordata.h  kcmcolorfulhelper.cpp  kcmcolorfulhelper.h  main.cpp  mmcq.cpp  mmcq.h
src/qml/: ColorUnit.qml  ColorWidget.qml  Wallpaper.qml  main.qml  test.qml
